--- a/fabrics/public/manifest.json
+++ b/fabrics/public/manifest.json
@@ -1,19 +1,22 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+
+    "name": "Fabrics App",
+    "short_name": "Fabrics",
+    "description": "Connecting Suppliers and Manufacturers in the Clothing Industry",
+
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon1.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "logofab.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logofab.png",
       "type": "image/png",
       "sizes": "512x512"
     }
